Move to java.nio to improve test repeatability. fix #78